src/objects/New_User_Registeration__c.object
<CustomObject>
    <description>This is a Custom object which captures all the information while creating a new user.</description>
    <fields>
        <fullName>Access_Request__c</fullName>
        <description>Access Request</description>
        <label>Access Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Change Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Start_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Date__c</fullName>
        <label>Approval Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_Throughput_Time__c</fullName>
        <description>Approver Throughput Time</description>
        <formula>CASE( Status__c, 
&quot;Submitted&quot; , 0, 
&quot;In Process&quot; , NOW() - Date_Time_In_Process__c , 
&quot;Rejected&quot; , Date_Time_Rejected__c - Date_Time_In_Process__c , 
Date_Time_Approved__c - Date_Time_In_Process__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approver Throughput Time</inlineHelpText>
        <label>Approver Throughput Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_you_a_DW_Approver__c</fullName>
        <label>Are you a DW Approver</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Date_for_Training__c</fullName>
        <label>Available Date for Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <label>BL</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BL01 - BL Secure Interfaces &amp; Power</fullName>
                </value>
                <value>
                    <fullName>BL04 - BL Catena</fullName>
                </value>
                <value>
                    <fullName>BL10 - BL Logic and Protection</fullName>
                </value>
                <value>
                    <fullName>BL21 - BL Smart Antenna Solutions</fullName>
                </value>
                <value>
                    <fullName>BL24 - BL MOS Discretes</fullName>
                </value>
                <value>
                    <fullName>BL25 - BL Bipolar discretes</fullName>
                </value>
                <value>
                    <fullName>BL69 - BL Car Infot. &amp; Driver Assist.</fullName>
                </value>
                <value>
                    <fullName>BL70 - BL Advanced Automotive Analog</fullName>
                </value>
                <value>
                    <fullName>BL80 - BL Secure Mobile Transactions</fullName>
                </value>
                <value>
                    <fullName>BL84 - BL Secure Id Solutions</fullName>
                </value>
                <value>
                    <fullName>BL91 – Dragon</fullName>
                </value>
                <value>
                    <fullName>BLAS - BL Sensors</fullName>
                </value>
                <value>
                    <fullName>BLAU - BL Auto Micro Processors</fullName>
                </value>
                <value>
                    <fullName>BLDN - BL Digital Networking</fullName>
                </value>
                <value>
                    <fullName>BLM1 - BL Microcontrollers</fullName>
                </value>
                <value>
                    <fullName>BLRF - BL RF</fullName>
                </value>
                <value>
                    <fullName>BLSP - BL Power MOS FSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>BU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colleagues_email__c</fullName>
        <description>1602 Release SIR 663</description>
        <inlineHelpText>If you want to get the same access with your colleague, please fill in your colleague&apos;s email.</inlineHelpText>
        <label>Same access as my colleague (email)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan (AF)</fullName>
                </value>
                <value>
                    <fullName>Albania (AL)</fullName>
                </value>
                <value>
                    <fullName>Algeria (DZ)</fullName>
                </value>
                <value>
                    <fullName>American Samoa (AS)</fullName>
                </value>
                <value>
                    <fullName>Andorra (AD)</fullName>
                </value>
                <value>
                    <fullName>Angola (AO)</fullName>
                </value>
                <value>
                    <fullName>Anguilla (AI)</fullName>
                </value>
                <value>
                    <fullName>Antarctica (AQ)</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda (AG)</fullName>
                </value>
                <value>
                    <fullName>Argentina (AR)</fullName>
                </value>
                <value>
                    <fullName>Armenia (AM)</fullName>
                </value>
                <value>
                    <fullName>Aruba (AW)</fullName>
                </value>
                <value>
                    <fullName>Australia (AU)</fullName>
                </value>
                <value>
                    <fullName>Austria (AT)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan (AZ)</fullName>
                </value>
                <value>
                    <fullName>Bahamas (BS)</fullName>
                </value>
                <value>
                    <fullName>Bahrain (BH)</fullName>
                </value>
                <value>
                    <fullName>Bangladesh (BD)</fullName>
                </value>
                <value>
                    <fullName>Barbados (BB)</fullName>
                </value>
                <value>
                    <fullName>Belarus (BY)</fullName>
                </value>
                <value>
                    <fullName>Belgium (BE)</fullName>
                </value>
                <value>
                    <fullName>Belize (BZ)</fullName>
                </value>
                <value>
                    <fullName>Benin (BJ)</fullName>
                </value>
                <value>
                    <fullName>Bermuda (BM)</fullName>
                </value>
                <value>
                    <fullName>Bhutan (BT)</fullName>
                </value>
                <value>
                    <fullName>Bolivia (BO)</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina (BA)</fullName>
                </value>
                <value>
                    <fullName>Botswana (BW)</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island (BV)</fullName>
                </value>
                <value>
                    <fullName>Brazil (BR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Account_Created__c</fullName>
        <description>Date Time User ID Created</description>
        <inlineHelpText>Date Time User ID Created</inlineHelpText>
        <label>Date Time User ID Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Approved__c</fullName>
        <description>Date Time Approved</description>
        <inlineHelpText>Date Time Approved</inlineHelpText>
        <label>Date Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_In_Process__c</fullName>
        <description>Date Time In Process</description>
        <inlineHelpText>Date Time In Process</inlineHelpText>
        <label>Date Time In Process</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Rejected__c</fullName>
        <description>Date Time Rejected</description>
        <inlineHelpText>Date Time Rejected</inlineHelpText>
        <label>Date Time Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Subsidy</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exception_Role__c</fullName>
        <description>Used for Admins only to access non-end user profiles.</description>
        <label>Exception Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NXP Partner User</fullName>
                </value>
                <value>
                    <fullName>NXP Partner User - EMEA</fullName>
                </value>
                <value>
                    <fullName>NXP Report Adm</fullName>
                </value>
                <value>
                    <fullName>NXP Sales Ops Exec user</fullName>
                </value>
                <value>
                    <fullName>NXP Super User</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>System Administrator - No Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Key_Account__c</fullName>
        <description>Global Key Account Management</description>
        <inlineHelpText>Global Key Account Management</inlineHelpText>
        <label>Global Key Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>I_agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Flag_Green__c</fullName>
        <description>Hidden field for Report - New User Registration PQ - % - If Flag is green then it should be 1</description>
        <formula>IF(  CONTAINS(SLA_Flag_Overall__c , &quot;OK&quot;),1,0)</formula>
        <label>Is Flag Green</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>1602 Release SIR 663</description>
        <inlineHelpText>Please give your Job Title or Functi​ion, which will impact your SFDC user access</inlineHelpText>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Function_Area__c</fullName>
        <description>Main function area from BI-Request-Form</description>
        <label>Main Function Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>BU/BL Management</fullName>
                </value>
                <value>
                    <fullName>F&amp;A</fullName>
                </value>
                <value>
                    <fullName>GSM</fullName>
                </value>
                <value>
                    <fullName>HRM</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Sales Representative (Non NXP user)</fullName>
                </value>
                <value>
                    <fullName>SCM</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Business / Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_email__c</fullName>
        <label>Manager&apos;s email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NXP_Role__c</fullName>
        <description>Role list from BI-Request-Form</description>
        <label>NXP Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Main_Function_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Service Manager</fullName>
                </value>
                <value>
                    <fullName>BI Basic IT</fullName>
                </value>
                <value>
                    <fullName>BI General Support</fullName>
                </value>
                <value>
                    <fullName>BI SEM BCS Support</fullName>
                </value>
                <value>
                    <fullName>BI TAM</fullName>
                </value>
                <value>
                    <fullName>BI User + TPM Admin</fullName>
                </value>
                <value>
                    <fullName>BL Product Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>BU/BL Controller</fullName>
                </value>
                <value>
                    <fullName>BU/BL General Manager</fullName>
                </value>
                <value>
                    <fullName>BU/BL Industrial Manager</fullName>
                </value>
                <value>
                    <fullName>BU/BL Logistics Manager</fullName>
                </value>
                <value>
                    <fullName>BU/BL Operations Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Account Manager / Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Corp. BP &amp; Analyses</fullName>
                </value>
                <value>
                    <fullName>Corp. Consolidation</fullName>
                </value>
                <value>
                    <fullName>Corp. Fiscal and GSA Controller</fullName>
                </value>
                <value>
                    <fullName>Corp. Internal Audit</fullName>
                </value>
                <value>
                    <fullName>Corp. SSC Controller</fullName>
                </value>
                <value>
                    <fullName>Corp. Treasury</fullName>
                </value>
                <value>
                    <fullName>CP Manager</fullName>
                </value>
                <value>
                    <fullName>Credit Controller</fullName>
                </value>
                <value>
                    <fullName>CSC Manager</fullName>
                </value>
                <value>
                    <fullName>CSC Representative All Channels</fullName>
                </value>
                <value>
                    <fullName>CSC Representative Channel</fullName>
                </value>
                <value>
                    <fullName>CSC Representative OEM</fullName>
                </value>
                <value>
                    <fullName>Customer Operations CP&amp;Q</fullName>
                </value>
                <value>
                    <fullName>Customer Operations Reporting &amp; Analysis</fullName>
                </value>
                <value>
                    <fullName>Direct Account Manager / Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Disti Ops</fullName>
                </value>
                <value>
                    <fullName>EMS Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read-only</fullName>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_group_membership__c</fullName>
        <label>Group Membership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Back End Materials</fullName>
                </value>
                <value>
                    <fullName>BE Equipment</fullName>
                </value>
                <value>
                    <fullName>BE Subcon</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Facility Management</fullName>
                </value>
                <value>
                    <fullName>FE Equipment</fullName>
                </value>
                <value>
                    <fullName>Front End Materials</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>IC Wafer Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Professional Service</fullName>
                </value>
                <value>
                    <fullName>Sound Solutions</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Warehouse &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>World</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <description>1602 Release SIR 663</description>
        <inlineHelpText>Why you need SFDC access?  What do you need and would like to work in SFDC?</inlineHelpText>
        <label>Reason for Request</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_End_Date__c</fullName>
        <description>Registration End Date</description>
        <formula>CASE ( Status__c , 
&quot;User A/c Created&quot; , Date_Time_Account_Created__c , 
&quot;Rejected&quot; , Date_Time_Rejected__c , 
&quot;Change Made&quot; , Date_Time_Account_Created__c ,
IF(AND(Date_Time_Account_Created__c=NULL,Date_Time_Rejected__c=NULL),NULL,NOW())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Registration End Date</inlineHelpText>
        <label>Registration End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_STAR_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Customer for STAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_for_Account_in__c</fullName>
        <label>Request for Account in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Box.net</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com &amp; Box.net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestforAccountin__c</fullName>
        <label>Request for Account in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Brainshark</fullName>
                </value>
                <value>
                    <fullName>GoToMeeting</fullName>
                </value>
                <value>
                    <fullName>Training App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NER (NXP External Relations)</fullName>
                </value>
                <value>
                    <fullName>NXP BU/BL</fullName>
                </value>
                <value>
                    <fullName>NXP CMD Read Only (Account, CACC, Funloc, Global Customer Master...)</fullName>
                </value>
                <value>
                    <fullName>NXP Corporate Marketing</fullName>
                </value>
                <value>
                    <fullName>NXP Finance/Ops</fullName>
                </value>
                <value>
                    <fullName>NXP FUNLOC Approver</fullName>
                </value>
                <value>
                    <fullName>NXP FUNLOC Requester</fullName>
                </value>
                <value>
                    <fullName>NXP Read Only</fullName>
                </value>
                <value>
                    <fullName>NXP Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Rep - Partner Executive</fullName>
                </value>
                <value>
                    <fullName>Sales Rep - Partner Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep - Partner User</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAML_Deployment_Wave__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SAML Deployment Wave</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Flag_Overall__c</fullName>
        <formula>CASE(TEXT(Status__c),&quot;Submitted&quot;,(IF(Today()-Datevalue(CreatedDate)&gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;In Process&quot;,(IF(Today()-Approval_Submission_Date__c &gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;Approved&quot;,(IF(Today()- Approval_Start_Date__c&gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Flag - Overall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Flag_Submitted__c</fullName>
        <formula>CASE(TEXT(Status__c),&quot;Submitted&quot;,(IF(Today()-Datevalue(CreatedDate)&gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;In Process&quot;,(IF(Today()-Approval_Submission_Date__c &gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;Approved&quot;,(IF(Today()- Approval_Start_Date__c&gt;4 , &quot;FAIL&quot;, &quot;OK&quot;)),&quot;OK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Flag - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Requirements_in_Salesforce__c</fullName>
        <label>Special Requirements in Salesforce</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Mags__c</fullName>
        <label>Select MAGS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Are_you_a_DW_Approver__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>R01</fullName>
                </value>
                <value>
                    <fullName>R02</fullName>
                </value>
                <value>
                    <fullName>R05</fullName>
                </value>
                <value>
                    <fullName>R07</fullName>
                </value>
                <value>
                    <fullName>R08</fullName>
                </value>
                <value>
                    <fullName>R16</fullName>
                </value>
                <value>
                    <fullName>R25</fullName>
                </value>
                <value>
                    <fullName>R27</fullName>
                </value>
                <value>
                    <fullName>R29</fullName>
                </value>
                <value>
                    <fullName>R33</fullName>
                </value>
                <value>
                    <fullName>R34</fullName>
                </value>
                <value>
                    <fullName>R36</fullName>
                </value>
                <value>
                    <fullName>R38</fullName>
                </value>
                <value>
                    <fullName>R40</fullName>
                </value>
                <value>
                    <fullName>R51</fullName>
                </value>
                <value>
                    <fullName>R53</fullName>
                </value>
                <value>
                    <fullName>R58</fullName>
                </value>
                <value>
                    <fullName>R62</fullName>
                </value>
                <value>
                    <fullName>R63</fullName>
                </value>
                <value>
                    <fullName>R67</fullName>
                </value>
                <value>
                    <fullName>R71</fullName>
                </value>
                <value>
                    <fullName>R72</fullName>
                </value>
                <value>
                    <fullName>R73</fullName>
                </value>
                <value>
                    <fullName>R77</fullName>
                </value>
                <value>
                    <fullName>R79</fullName>
                </value>
                <value>
                    <fullName>R83</fullName>
                </value>
                <value>
                    <fullName>R88</fullName>
                </value>
                <value>
                    <fullName>R90</fullName>
                </value>
                <value>
                    <fullName>R98</fullName>
                </value>
                <value>
                    <fullName>R99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved - Awaiting user licenses.</fullName>
                </value>
                <value>
                    <fullName>User A/c Created</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Change Made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Throughput_Time__c</fullName>
        <description>GSAS Throughput Time</description>
        <formula>CASE(Status__c, 
&quot;In Process&quot;, NOW() - CreatedDate - Approver_Throughput_Time__c, 
&quot;Approved&quot;, (Date_Time_In_Process__c - CreatedDate) + (NOW() - Date_Time_Approved__c), 
&quot;Approved - Awaiting user licenses.&quot;, (Date_Time_In_Process__c - CreatedDate) + (NOW() - Date_Time_Approved__c), 
&quot;User A/c Created&quot;, 
(Date_Time_In_Process__c - CreatedDate) + (Date_Time_Account_Created__c - Date_Time_Approved__c), 
&quot;Rejected&quot;, (Date_Time_In_Process__c - CreatedDate), 
NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GSAS Throughput Time</inlineHelpText>
        <label>GSAS Throughput Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Total Time</description>
        <formula>CASE(Status__c, 
&quot;User A/c Created&quot;, (Approver_Throughput_Time__c + Throughput_Time__c), 
&quot;Change Made&quot;, (Approver_Throughput_Time__c + Throughput_Time__c), 
&quot;Rejected&quot;, (Approver_Throughput_Time__c + Throughput_Time__c), 
NOW() - CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Groups__c</fullName>
        <description>User Groups of Role Hierarchy 2.0</description>
        <inlineHelpText>User Groups of Role Hierarchy 2.0</inlineHelpText>
        <label>User Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>z_OBSOLETED_BU__c</fullName>
        <label>z_OBSOLETED_BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>510 - BU SECURITY &amp; CONNECTIVITY</fullName>
                </value>
                <value>
                    <fullName>511 - BU STANDARD PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>513 - BU LOGIC &amp; SMART ANALOG</fullName>
                </value>
                <value>
                    <fullName>514 - BU RF Power</fullName>
                </value>
                <value>
                    <fullName>525 - BU AUTOMOTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>